# reddit-parser

./: LICENSE  README.md  ScrapeReddit.py  prompts.txt  pyproject.toml  streamlit_app.py
prompts/: correlation_analysis.xml  title_and_post_text_analysis.xml
src/: ScrapeReddit.py  __init__.py  app.py  custom_reddit.py  llm_caller.py  prompt_utils.py  prompts.hbs  reddit_analysis.py  requirements.txt  scrape_reddit.py
src/prompts/: correlation_analysis.xml  keyword_pattern_analysis.xml.j2  keyword_pattern_analysis_system.xml.j2  language_feature_extraction.xml  post_types_analysis.xml.j2  post_types_analysis_system.xml.j2  proposed_SEO_content_strategies.xml.j2  proposed_SEO_content_strategies_system.xml.j2  sentiment_analysis.xml.j2  sentiment_analysis_system.xml.j2  sentiment_color_tracking.xml  title_and_post_text_analysis.xml  trend_analysis.xml  trend_analysis.xml.j2  trend_analysis_system.xml.j2
src/templates/: language_feature_extraction.hbs
templates/: base.hbs  correlation_analysis.hbs  language_feature_extraction.hbs  sentiment_color_tracking.hbs  title_and_post_text_analysis.hbs  trend_analysis.hbs
