[build-system]
requires = ["poetry-core>=1.0.0", "setuptools>=45", "wheel"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "reddit-scraper"
version = "0.1.0"
description = "A Streamlit app for scraping Reddit posts based on search queries"
authors = ["Melissa Tan <melissaxiaotan@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "reddit_scraper"}]

[tool.poetry.dependencies]
python = "^3.7"
streamlit = "^1.12.0"
pandas = "^1.3.5"
praw = "^7.5.0"
selenium = "^4.1.0"
beautifulsoup4 = "^4.10.0"
python-dotenv = "^0.19.2"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"
black = "^22.3.0"
flake8 = "^4.0.1"

[project]
name = "reddit-scraper"
version = "0.1.0"
description = "A Streamlit app for scraping Reddit posts based on search queries"
readme = "README.md"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["reddit", "scraper", "streamlit", "selenium"]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/yourusername/reddit-scraper"

[tool.setuptools.packages.find]
where = ["."]
include = ["reddit_scraper*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

